fix: corrigir rótulos dos campos de seleção para estado e cidade

--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
     </div>
     <div>
       <!-- combo box com os estados da api "https://servicodados.ibge.gov.br/api/v1/localidades/estados" -->
-      <label for="comboEstados">Estados:</label>
+      <label for="comboEstados">Estado:</label>
       <select id="comboEstados" name="comboEstados">
         <option value="">Selecione um estado</option>
       </select>
     </div>
     <div>
       <!-- combo box com as cidades da api "https://servicodados.ibge.gov.br/api/v1/localidades/estados/{UF}/municipios" -->
-      <label for="comboCidades">Cidades:</label>
+      <label for="comboCidades">Cidade:</label>
       <select id="comboCidades" name="comboCidades">
         <option value="">Selecione uma cidade</option>
       </select>
