fix: corrigir idioma do HTML para pt-br e remover campos de cidade e estado

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8" />
@@ -21,18 +21,9 @@
     <div>
       <label for="numero">Número:</label>
       <input type="text" id="numero" name="numero" placeholder="Ex.: 5222" />
-    </div>
-    <div>
+    </div>    <div>
       <label for="bairro">Bairro:</label>
       <input type="text" id="bairro" name="bairro" placeholder="Ex.: Centro" />
-    </div>
-    <div>
-      <label for="estado">Estado:</label>
-      <input type="text" id="estado" name="estado" placeholder="Estado" />
-    </div>
-    <div>
-      <label for="cidade">Cidade:</label>
-      <input type="text" id="cidade" name="cidade" placeholder="Cidade" />
     </div>
     <div>
       <!-- combo box com os estados da api "https://servicodados.ibge.gov.br/api/v1/localidades/estados" -->
